tests/NormalTests/paczka1/fuzzy1/60063718.err
Error in line 2: rR1Pjh S4r0 42,4
Error in line 7: S491 S985 53,0
Error in line 9: nu9ezACjt S383 26,6
Error in line 6: dUc5jQq S985 6,8
Error in line 10: rR1Pjh S470 50,5
